# SmartChatServer

./: CMakeLists.txt  Protocol.h  README.md  SmartChatServer.kdev4  init.sql
.kdev4/: SmartChatServer.kdev4
src/: CMakeLists.txt  smartchatserver.cpp  smartchatserver.h  smartchatserver.json
